--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
-    --roxo-mais-escuro: #DBAAFF;
-    --roxo-medio: #E9CCFC;
-    --roxo-mais-claro: #F3EAF9;
+    --roxo-mais-escuro: #10002B;
+    --roxo-medio: #7B2CBF;
+    --roxo-mais-claro: #E0AAFF;
     --preto: #000000;
     --branco: #FFFFFF;
 }
@@ -13,8 +14,8 @@
 }
 
 body {
-    font-family: 'Crimson Text', Arial, Helvetica, sans-serif;
-    color: var(- --preto);
+    font-family: 'DM Sans', Arial, Helvetica, sans-serif;
+    color: var(--roxo-mais-escuro);
 }
 
 .topo {
@@ -53,7 +54,7 @@ a {
 .botao-primario {
     font-weight: bold;
     background-color: var(--roxo-medio);
-    color: var(--preto);
+    color: var(--branco);
     text-align: center;
     padding: 14px 26px;
     transition: opacity 0.6s ease;
@@ -67,13 +68,12 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: auto;
-    padding-bottom: 20px;
-    background-color: var(--roxo-medio);
+    width: fit-content;
+    padding: 80px;
 }
 
 .header img {
-    width: auto%;
+    width: auto;
 }
 
 .esquerda {
@@ -85,23 +85,21 @@ a {
 
 h1 {
     font-weight: bold;
-    font-size: 60px;
+    font-size: 50px;
     width: 90%;
     line-height: 110%;
 }
 
 .esquerda p {
-    font-size: 30px;
+    font-size: 18px;
     line-height: 130%;
 }
 
 .esquerda .botao-primario {
-    font-size: 30px;
+    font-size: 22px;
     font-weight: bold;
     padding: 10px 50px;
     width: fit-content;
-    background-color: var(--branco);
-    border-radius: 16px;
 }
 
 #produtos {
@@ -226,7 +224,7 @@ h3 {
 
 footer {
     background-color: var(--roxo-medio);
-    color: var(--preto);
+    color: var(--branco);
     padding: 40px 0;
     display: flex;
     justify-content: space-around;
@@ -268,3 +266,4 @@ footer li:hover {
     display: flex;
     justify-content: space-around;
     font-size: 22px;
+}
