--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 body {
     font-family: 'DM Sans', Arial, Helvetica, sans-serif;
-    color: var(--roxo-mais-escuro);
+    color: var(--preto);
 }
 
 .topo {
@@ -53,8 +53,8 @@ a {
 
 .botao-primario {
     font-weight: bold;
-    background-color: var(--roxo-medio);
-    color: var(--branco);
+    background-color: var(--roxo-mais-claro);
+    color: var(--preto);
     text-align: center;
     padding: 14px 26px;
     transition: opacity 0.6s ease;
@@ -223,8 +223,8 @@ h3 {
 }
 
 footer {
-    background-color: var(--roxo-medio);
-    color: var(--branco);
+    background-color: var(--roxo-mais-claro);
+    color: var(--preto);
     padding: 40px 0;
     display: flex;
     justify-content: space-around;
